@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.33.
-.TH PKHINT "1" "June 2004" "C@LL - Conseil Internet & Logiciels Libres" "User Commands"
+.TH PKHINT "1" "July 2004" "C@LL - Conseil Internet & Logiciels Libres" "User Commands"
 .SH NAME
 pkhint \- manual page for pkhint 1.19alpha28_unofficial
 .SH DESCRIPTION
