@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.33.
-.TH PKPRINTERS "1" "June 2004" "C@LL - Conseil Internet & Logiciels Libres" "User Commands"
+.TH PKPRINTERS "1" "July 2004" "C@LL - Conseil Internet & Logiciels Libres" "User Commands"
 .SH NAME
 pkprinters \- manual page for pkprinters 1.19alpha28_unofficial
 .SH DESCRIPTION
@@ -25,6 +25,9 @@ unless \fB\-s\fR|--skipexisting is also used.
 .TP
 \fB\-d\fR | \fB\-\-delete\fR
 Deletes printers from the quota storage.
+.TP
+\fB\-D\fR | \fB\-\-description\fR
+Adds a textual description to printers.
 .TP
 \fB\-c\fR | \fB\-\-charge\fR p[,j]
 Sets the price per page and per job to charge.
@@ -64,14 +67,15 @@ is not set.
 .PP
 examples :
 .IP
-\f(CW$ pkprinters --add --charge 0.05,0.1 hp2100 hp2200 hp8000\fR
+\f(CW$ pkprinters --add -D "HP Printer" --charge 0.05,0.1 hp2100 hp2200 hp8000\fR
 .IP
 Will create three printers named hp2100, hp2200 and hp8000.
 Their price per page will be set at 0.05 unit, and their price
 per job will be set at 0.1 unit. Units are in your own currency,
 or whatever you want them to mean.
-If any of these printers already exists, it is not modified at
-all.
+All of their descriptions will be set to the string "HP Printer".
+If any of these printers already exists, it will also be modified
+unless the \fB\-s\fR|--skipexisting command line option is also used.
 .IP
 \f(CW$ pkprinters --delete "*"\fR
 .IP
